--- a/projects/XMLBuilder/package.json
+++ b/projects/XMLBuilder/package.json
@@ -9,7 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "Blob": "^0.10.0",
     "async": "^2.3.0",
+    "file-saver": "^1.3.3",
     "jsontoxml": "0.0.11"
+  },
+  "devDependencies": {
+    "@types/file-saver": "0.0.0"
   }
 }
