--- a/projects/IHM/package.json
+++ b/projects/IHM/package.json
@@ -7,7 +7,8 @@
   "license": "GPLv3",
   "dependencies": {
     "angular-chosen-localytics": "^1.6.0",
-    "chosen-js": "^1.7.0"
+    "chosen-js": "^1.7.0",
+    "materialize-css": "^0.98.2"
   },
   "devDependencies": {
     "bower": "^1.7.7",
