--- a/projects/server/package.json
+++ b/projects/server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "connect-mongo": "^1.3.2",
     "express": "^4.15.2",
-    "express-session": "^1.15.2"
+    "express-session": "^1.15.2",
+    "jQuery": "^1.7.4"
   }
 }
