--- a/projects/server/package.json
+++ b/projects/server/package.json
@@ -9,6 +9,7 @@
   "author": "florent teppe",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.1",
     "connect-mongo": "^1.3.2",
     "express": "^4.15.2",
     "express-session": "^1.15.2",
