--- a/projects/server/package.json
+++ b/projects/server/package.json
@@ -13,6 +13,7 @@
     "connect-mongo": "^1.3.2",
     "express": "^4.15.2",
     "express-session": "^1.15.2",
-    "jQuery": "^1.7.4"
+    "jQuery": "^1.7.4",
+    "mongoose": "^4.9.7"
   }
 }
